# devops-incident-responder

./: .dockerignore  .gitignore  Dockerfile  README.md  abdur.ipynb  client.py  devops_grpo_training.ipynb  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_locally.py
artifacts/: incident_rollouts.jsonl
configs/: train.json
scripts/: __init__.py  baseline.py  collect_rollouts.py  eval.py  heuristic_policy.py  metrics.py  plot_results.py  random_policy.py  train.py
server/: app.py  environment.py  fix_notebook.py  models.py  rewards.py  scenarios.py  seed_sets.py  session_store.py  tasks.py
tests/: test_openenv_compliance.py  test_rewards.py  test_seeds.py  test_sessions.py
